# Generative_AI_Course_Work

./: .gitignore  README.MD  app.py  codebase_genius.jac  main.py
Codebase_genius/: README.md
Codebase_genius/agents/: code_analyzer.py  code_genius.py  doc_genie.py  repo_mapper.py
Codebase_genius/jac_version/: app.py  jac_utils.py
Codebase_genius/outputs/Wachacha-jay_Recommender_system/: metadata.json
Codebase_genius/utils/: git_utils.py
agentic_codebase_genius/: genius.jac  requirements.txt  setup_languages.py
agentic_codebase_genius/utils/: language_detector.py
jac_language/: byllm.jac  exception_handling.jac
jac_language/Assignment_1/: README.MD  main.jac
jac_language/Assignment_1/models/: employee.impl.jac  (+1 more)
jac_language/advanced_tutorials/: base_module.jac  class_bodies.jac  classes.jac
jac_language/beginner_tutorial/: basic_oop.jac  data_structures.jac  for_loops.jac  functions.jac  hello.jac  if_statements.jac  variable.jac
jac_language/file_structure/: README.MD
jac_tutorials/: main.py  pyproject.toml
llm_tutorial/: README.MD  llm_tutorial.jac
llm_visualizer/: Dockerfile  README.MD  README.md  config.jac  docker-compose.yml  impl.jac  main.jac  main.jir  nodes.jac  pyproject.toml  render_ui.jac  requirements.txt  run_app.py  setup.py  visualizations.jac  visualizations.py  walkers.jac
llm_visualizer/tests/: config.test.jac  nodes.test.jac  visualizations.test.jac  walkers.test.jac
mars_sim_app/: README.MD  colony_simulation.jac  edges.jac  mars_api.jac  mars_app.py  mars_client.py  nodes.jac  run_mars_app.py  walkers.jac
(+4 files in other folders)
