[tool.poetry]
name = "llm-visualizer"
version = "1.0.0"
description = "Interactive LLM architecture visualization platform"
authors = ["James w, ngaruiya <jameswachacha@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Wachacha-jay/llm-visualizer"
repository = "https://github.com/Wachacha-jay/llm-visualizer"
keywords = ["llm", "transformer", "visualization", "education", "jaclang"]

[tool.poetry.dependencies]
python = "^3.9"
jaclang = ">=0.5.0"
streamlit = ">=1.28.0"
plotly = ">=5.17.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.jac", "test_*.py"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
